tests/e2e-chainsaw/v1beta2/acl-pvc/redis-replication/ready-replication.yaml
---
apiVersion: redis.redis.opstreelabs.in/v1beta2
kind: RedisReplication
metadata:
  name: redis-replication-acl-pvc
status:
  # by default, the first pod is being selected as master
  masterNode: redis-replication-acl-pvc-0
