tests/e2e-chainsaw/v1beta2/acl-pvc/redis-replication/ready-sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-replication-acl-pvc
status:
  readyReplicas: 3
  replicas: 3
